Actualización: vistas, auditoría, PDF y mejoras visuales

--- a/public/informacion.html
+++ b/public/informacion.html
@@ -20,7 +20,9 @@
         Ya sea que busques un outfit completo o solo una prenda para destacar, AUTHENTIC tiene lo que necesitas. ¡Explora nuestros productos y encuentra tu estilo!
       </p>
 
-      <a href="/productos">Ver productos</a>
+      <div class="botones-navegacion">
+        <a href="/productos" class="boton">Ver productos</a>
+      </div>
     </section>
   </main>
 
